[gd_scene load_steps=13 format=3 uid="uid://camqqqwadhrk"]

[ext_resource type="Texture2D" uid="uid://bsl48uec63af7" path="res://assets/textures/particles/circles.png" id="1_pae44"]
[ext_resource type="Script" uid="uid://bg84rxaiikf2w" path="res://scripts/drone.gd" id="1_xanut"]
[ext_resource type="PackedScene" uid="uid://c44qbyfhbgp7k" path="res://scenes/drone/spark_particles.tscn" id="2_ws74u"]
[ext_resource type="Texture2D" uid="uid://cejco36cbu4qe" path="res://assets/textures/drone.png" id="3_361hk"]
[ext_resource type="Script" uid="uid://q4q3rd6nnv1k" path="res://scripts/item/item_manager.gd" id="5_315ty"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_s8ffj"]
friction = 0.4
bounce = 0.3

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_aqo7c"]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 2
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_j1ma2"]
colors = PackedColorArray(0.313726, 0.313726, 0.313726, 1, 0, 0, 0, 0)

[sub_resource type="Animation" id="Animation_361hk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_c8kxo"]
resource_name = "fly"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_at7wg"]
_data = {
&"RESET": SubResource("Animation_361hk"),
&"fly": SubResource("Animation_c8kxo")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_315ty"]
radius = 75.06

[node name="Drone" type="RigidBody2D"]
physics_material_override = SubResource("PhysicsMaterial_s8ffj")
gravity_scale = 0.1
continuous_cd = 1
contact_monitor = true
script = ExtResource("1_xanut")
sparks_velocity_threshold = 20.0

[node name="SmokeParticles" type="CPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_aqo7c")
emitting = false
texture = ExtResource("1_pae44")
lifetime = 1.2
emission_shape = 1
emission_sphere_radius = 3.0
spread = 180.0
gravity = Vector2(0, -91)
angular_velocity_min = -20.0
angular_velocity_max = 20.0
color_ramp = SubResource("Gradient_j1ma2")
anim_offset_min = 0.5
anim_offset_max = 0.75

[node name="SparkParticles" parent="." instance=ExtResource("2_ws74u")]
visible = false
amount = 3
one_shot = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_at7wg")
}

[node name="Collider" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-4, 7, 4, 7, 5, -2, 5, -3, 5, -7, -5, -7, -5, -3, -5, -2)

[node name="DisableTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("3_361hk")
vframes = 4

[node name="ItemManager" type="Area2D" parent="."]
script = ExtResource("5_315ty")
metadata/_custom_type_script = "uid://q4q3rd6nnv1k"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemManager"]
shape = SubResource("CircleShape2D_315ty")
